Update JSONViewer library and handle JSON parsing errors

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,12 @@
         "matches": ["*://*/*"],
         "js": ["content.js"]
       }
+    ],
+    "web_accessible_resources": [
+      {
+        "resources": ["lib/json-viewer.min.js"],
+        "matches": ["*://*/*"] 
+      }
     ]
   }
   
